# example_package

./: pyproject.toml
src/example_package_thyagomota.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
