[project]
name = "example_package_thyagomota"
version = "0.0.1"
authors = [
  { name="Thyago Mota", email="thyagomota@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thyagomota/example_package"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"